
* Release history

** Main branch change

- file completion for /drop only list added files, addressing https://github.com/tninja/aider.el/issues/179
- rewrite unit-tests

** v0.11.1

- Add support for dropping file under cursor in aider comint buffer, given discussion in https://github.com/tninja/aider.el/issues/179
- Multiple chats for the same repository. 
  - To turn on this feature, ~(setq aider-use-branch-specific-buffers t)~
  - *If we want to switch to work on a different feature, we switch git branch, and it will map to a corresponding aider session.* The aider session name pattern would be ~aider:<path-to-git-repo>:branch-name~ 
- prevent "Object cannot be turned into regex" error in aider-comint-session

** v0.11.0

- Make transient menu be able to fit in narrow screen
  - https://github.com/tninja/aider.el/issues/157 by markokocic
  - Added aider-transient-menu-2cols / aider-transient-menu-1col
- transient-setup: Not a transient prefix command or group definition: aider--menu-aider-process
  - https://github.com/tninja/aider.el/issues/163, found by Spike-Leung and markokocic
  - Fixed by Spike-Leung in https://github.com/tninja/aider.el/pull/164
    - It require latest >= transient-20250520.1040
    - [X] will update transient version dependency to 0.9.0 after it got released
- Better align aider-transient-menu-2col, by Spike-Leung
- Fix error during redisplay (jit-lock-function) when working with comint mode
  - https://github.com/tninja/aider.el/issues/159 by velimir
  - change came from https://github.com/MatthewZMD/aidermacs/pull/131/files by @CeleritasCelery    
- aider-add-module support regex filtering on file content
- Redesign diff generation function: aider--magit-generate-feature-branch-diff-file