@@ -108,7 +108,7 @@ Also based on aider LLM benchmark: https://aider.chat/docs/leaderboards/"
   ("m" "Show Last Commit (C-u: magit-log)"        aider-magit-show-last-commit-or-log)
   ("u" "Undo Last Change"                         aider-undo-last-change)
   ("v" "Pull or Review Code Change"               aider-pull-or-review-diff-file)
-  ("b" "File Evolution Analysis"                  aider-magit-blame-analyze))
+  ("e" "File Evolution Analysis (C-u: Repo)"      aider-magit-blame-or-log-analyze))
 
 ;;; Transient menu items for the “Code Change” section.
 (transient-define-group aider--menu-code-change
@@ -129,7 +129,7 @@ Also based on aider LLM benchmark: https://aider.chat/docs/leaderboards/"
   ("d" "Code Reading"               aider-code-read)
   ("c" "Copy To Clipboard"          aider-copy-to-clipboard)
   ("P" "Software Planning"          aider-start-software-planning)
-  ("e" "Debug Exception"            aider-debug-exception)
+  ("E" "Debug Exception"            aider-debug-exception)
   ("h" "Open History"               aider-open-history)
   ("?" "Help (C-u: homepage)"       aider-help))
 
