@@ -4,6 +4,9 @@
 ** Main branch change
 
 - file completion for /drop only list added files, addressing https://github.com/tninja/aider.el/issues/179
+- Add whole git repo evolution analysis: aider-magit-log-analyze
+  - Update menu item to aider-magit-blame-or-log-analyze
+- Add aider-magit-setup-transients function to register Aider commands with Magit transients
 - rewrite unit-tests
 
 ** v0.11.1
